[package]
name = "hinix"
version = "0.2.1"
edition = "2018"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/hinix"
license = "MIT"
readme = "README.md"
categories = ["os::unix-apis"]
description = """
High level *nix functionality in Rust.
"""

[dependencies]
nix = "0.26"
libc = "0.2"
clap = "2.34"

