[package]
name = "hinix"
version = "0.3.0-pre.0"
edition = "2021"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/hinix"
license = "MIT"
readme = "README.md"
categories = ["os::unix-apis"]
description = """
High level *nix functionality in Rust.
"""

[features]
default = []
utils = ["clap"]

[dependencies]
nix = "0.26"
libc = "0.2"
clap = { version = "3.2", optional = true }

[[bin]]
name = "mqrecv"
required-features = ["utils"]

[[bin]]
name = "mqsend"
required-features = ["utils"]

